--- a/tasks/prepare-aws/task.yml
+++ b/tasks/prepare-aws/task.yml
@@ -1,6 +1,11 @@
 ---
 platform: linux
 
+image_resource:
+  type: docker-image
+  source:
+    repository: pcfnorm/rootfs
+    tag: 1.0.20
 inputs:
   - name: terraform-state
   - name: ami
