--- a/pipelines/iaas-pave/pipeline.yml
+++ b/pipelines/iaas-pave/pipeline.yml
@@ -21,15 +21,6 @@ resources:
     uri: ((automation_repo))
     branch: master
 
-- name: platform-automation-tasks
-  type: s3
-  source:
-    access_key_id: ((access_key_id))
-    secret_access_key: ((secret_access_key))
-    region_name: ((aws_region))
-    bucket: ((artifacts_bucket))
-    regexp: platform-automation-tasks-(.*).zip
-
 - name: platform-automation-image
   type: s3
   source:
@@ -120,18 +111,17 @@ jobs:
 
   - task: destroy-infrastructure
     file: pcf-aws-automation/tasks/destroy-aws/task.yml
-    params:
-      ENV_NAME: ((env_name))
-      AWS_ACCESS_KEY_ID: ((access_key_id))
-      AWS_SECRET_ACCESS_KEY: ((secret_access_key))
-      AWS_REGION: ((aws_region))
-      AWS_AZ1: ((aws_az1))
-      AWS_AZ2: ((aws_az2))
-      AWS_AZ3: ((aws_az3))
-      HOSTED_ZONE: ((hosted_zone))
-      DNS_SUFFIX: ((dns_suffix))
+    # params:
+    #   ENV_NAME: ((env_name))
+    #   AWS_ACCESS_KEY_ID: ((access_key_id))
+    #   AWS_SECRET_ACCESS_KEY: ((secret_access_key))
+    #   AWS_REGION: ((aws_region))
+    #   AWS_AZ1: ((aws_az1))
+    #   AWS_AZ2: ((aws_az2))
+    #   AWS_AZ3: ((aws_az3))
+    #   HOSTED_ZONE: ((hosted_zone))
+    #   DNS_SUFFIX: ((dns_suffix))
     ensure:
       params:
         file: terraform-state-output/terraform.tfstate
       put: terraform-state
-      VPC_CIDR: ((vpc_cidr))
