--- a/config/pipelines/params-iaas-pave.yml
+++ b/config/pipelines/params-iaas-pave.yml
@@ -7,3 +7,4 @@ tf_state_bucket: siob-platform-automation-tf-state
 configuration_uri: https://github.com/ob1-sc/pcf-aws-pa-config
 
 opsman_major_minor_version: ^2\.4\.[0-9]+$
+ops_manager_vm: false
