Adding missing aws task vars

--- a/pipelines/iaas-pave/pipeline.yml
+++ b/pipelines/iaas-pave/pipeline.yml
@@ -113,6 +113,8 @@ jobs:
   - task: destroy-infrastructure
     file: pcf-aws-automation/tasks/destroy-aws/task.yml
     params:
+      AWS_ACCESS_KEY_ID: ((access_key_id))
+      AWS_SECRET_ACCESS_KEY: ((secret_access_key))
       AWS_REGION: ((aws_region))
     ensure:
       params:
