--- a/tasks/destroy-aws/task.yml
+++ b/tasks/destroy-aws/task.yml
@@ -13,6 +13,8 @@ inputs:
 outputs:
   - name: terraform-state-output
 params:
+  AWS_ACCESS_KEY_ID:
+  AWS_SECRET_ACCESS_KEY:
   AWS_REGION:
 run:
   path: pcf-aws-automation/tasks/destroy-aws/task.sh
