--- a/config/product/opsman.yml
+++ b/config/product/opsman.yml
@@ -2,4 +2,4 @@
 pivnet-api-token: ((pivnet-token))
 pivnet-file-glob: "*AWS.yml"
 pivnet-product-slug: ops-manager
-product-version: ^2\.4\.[0-9]+$
+product-version: 2.4.2
