--- a/config/product/opsman.yml
+++ b/config/product/opsman.yml
@@ -3,3 +3,19 @@ pivnet-api-token: ((pivnet-token))
 pivnet-file-glob: "*AWS.yml"
 pivnet-product-slug: ops-manager
 product-version: 2.4.2
+
+opsman-configuration:
+  aws:
+    access_key_id: ((access_key_id))
+    secret_access_key: ((secret_access_key))
+    region: ((aws_region))
+    vm_name: ops-manager-vm                           # default: OpsManager-vm
+    boot_disk_size: 100                               # default 200
+    vpc_subnet_id: subnet-034ca56f8ae93f0b4
+    security_group_id: sg-07d116615e4fb3b56
+    key_pair_name: pas-ops-manager-key
+    iam_instance_profile_name: pas_om_user
+    instance_type: m5.large
+    # At least one IP address (public or private) needs to be assigned to the VM.
+    public_ip: 63.34.167.60
+    # private_ip: 10.0.0.2
