--- a/config/product/opsman.yml
+++ b/config/product/opsman.yml
@@ -6,7 +6,7 @@ product-version: 2.4.2
 
 opsman-configuration:
   aws:
-    access_key_id: ((access_key_id))
+    access_key_id: ((/concourse/main/access_key_id))
     secret_access_key: ((secret_access_key))
     region: ((aws_region))
     vm_name: ops-manager-vm                           # default: OpsManager-vm
