--- a/config/product/opsman.yml
+++ b/config/product/opsman.yml
@@ -7,8 +7,8 @@ product-version: 2.4.2
 opsman-configuration:
   aws:
     access_key_id: ((/concourse/main/access_key_id))
-    secret_access_key: ((secret_access_key))
-    region: ((aws_region))
+    secret_access_key: ((/concourse/main/secret_access_key))
+    region: eu-west-1
     vm_name: ops-manager-vm                           # default: OpsManager-vm
     boot_disk_size: 100                               # default 200
     vpc_subnet_id: subnet-034ca56f8ae93f0b4
