--- a/config/product/opsman.yml
+++ b/config/product/opsman.yml
@@ -6,11 +6,11 @@ opsman-configuration:
     region: eu-west-1
     vm_name: ops-manager-vm                           # default: OpsManager-vm
     boot_disk_size: 100                               # default 200
-    vpc_subnet_id: subnet-034ca56f8ae93f0b4
+    vpc_subnet_id: subnet-041fe43050e0c40ed
     security_group_id: sg-07d116615e4fb3b56
     key_pair_name: pas-ops-manager-key
     iam_instance_profile_name: pas_ops_manager
-    instance_type: m5.large
+    instance_type: r4.large
     # At least one IP address (public or private) needs to be assigned to the VM.
     public_ip: 63.34.167.60
     # private_ip: 10.0.0.2
