--- a/pipelines/foundation-install/pipeline.yml
+++ b/pipelines/foundation-install/pipeline.yml
@@ -58,6 +58,7 @@ jobs:
         unpack: true
     - get: opsman-image
     - get: pcf-aws-automation
+
   - task: credhub-interpolate
     image: pcf-automation-image
     file: pcf-automation-tasks/tasks/credhub-interpolate.yml
@@ -72,6 +73,7 @@ jobs:
       files: pcf-aws-automation
     output_mapping:
       interpolated-files: pcf-aws-automation-interpolated
+
   - task: create-vm
     image: pcf-automation-image
     file: pcf-automation-tasks/tasks/create-vm.yml
@@ -93,7 +95,7 @@ jobs:
           output_mapping:
             repository-commit: configuration-commit
           params:
-            FILE_SOURCE_PATH: state.yml
+            FILE_SOURCE_PATH: opsman.yml
             FILE_DESTINATION_PATH: state/opsman.yml
             GIT_AUTHOR_EMAIL: "pcf-pipeline-bot@example.com"
             GIT_AUTHOR_NAME: "PCF Automation Bot"
@@ -102,3 +104,14 @@ jobs:
           params:
             repository: configuration-commit
             merge: true
+
+  - task: configure-authentication
+    image: pcf-automation-image
+    file: pcf-automation-tasks/tasks/configure-authentication.yml
+    attempts: 10
+    input_mapping:
+      env: pcf-aws-automation-interpolated
+      config: pcf-aws-automation-interpolated
+    params:
+      ENV_FILE: config/product/env.yml
+      AUTH_CONFIG_FILE: config/product/opsman-auth.yml
