--- a/config/common/params-automation.yml
+++ b/config/common/params-automation.yml
@@ -1,7 +1,9 @@
 ---
 terraform_repo: https://github.com/pivotal-cf/terraforming-aws
-automation_repo: https://github.com/ob1-sc/pcf-aws-automation
+automation_repo: git@github.com:ob1-sc/pcf-aws-automation.git
 
 artifacts_bucket: siob-platform-automation
 tf_state_bucket: siob-platform-automation-tf-state
+
+credhub-client: concourse_to_credhub
 credhub-server: https://plane.cp.aws.siob.me:8844
