Switched existing pipelines to use SSH

--- a/pipelines/pivnet-download/pipeline.yml
+++ b/pipelines/pivnet-download/pipeline.yml
@@ -12,6 +12,7 @@ resources:
 - name: pcf-aws-automation
   type: git
   source:
+    private_key: ((git-key.private_key))
     uri: ((automation_repo))
     branch: master
 
