--- a/pipelines/iaas-pave/pipeline.yml
+++ b/pipelines/iaas-pave/pipeline.yml
@@ -18,6 +18,7 @@ resources:
 - name: pcf-aws-automation
   type: git
   source:
+    private_key: ((git-key.private_key))
     uri: ((automation_repo))
     branch: master
 
