--- a/config/product/vars/director.yml
+++ b/config/product/vars/director.yml
@@ -2,7 +2,7 @@
 az1: eu-west-1a
 az2: eu-west-1b
 az3: eu-west-1c
-ntp_servers: .amazon.pool.ntp.org, 1.amazon.pool.ntp.org, 2.amazon.pool.ntp.org, 3.amazon.pool.ntp.org
+ntp_servers: 0.amazon.pool.ntp.org, 1.amazon.pool.ntp.org, 2.amazon.pool.ntp.org, 3.amazon.pool.ntp.org
 aws_access_key_id: ((/concourse/main/access_key_id))
 aws_secret_access_key: ((/concourse/main/secret_access_key))
 key_pair_name: pas-ops-manager-key
