--- a/pipelines/foundation-install/pipeline.yml
+++ b/pipelines/foundation-install/pipeline.yml
@@ -48,6 +48,7 @@ resources:
 jobs:
 
 - name: install-opsman
+  serial: true
   plan:
   - aggregate:
     - get: pcf-automation-image
@@ -132,11 +133,14 @@ jobs:
       AUTH_CONFIG_FILE: config/product/vars/opsman-auth.yml
 
 - name: install-director
+  serial: true
   plan:
     - aggregate:
       - get: pcf-automation-image
         params:
           unpack: true
+        passed:
+        - install-opsman
       - get: pcf-automation-tasks
         params:
           unpack: true
@@ -194,11 +198,13 @@ jobs:
 
 - name: store-staged-director-config
   plan:
+  - get: pcf-automation-image
+    params:
+      unpack: true
+    passed:
+    - install-director
   - aggregate:
     - get: pcf-automation-tasks
-      params:
-        unpack: true
-    - get: pcf-automation-image
       params:
         unpack: true
     - get: pcf-aws-automation
