--- a/pipelines/foundation-install/pipeline.yml
+++ b/pipelines/foundation-install/pipeline.yml
@@ -141,6 +141,7 @@ jobs:
           unpack: true
         passed:
         - install-opsman
+        trigger: true
       - get: pcf-automation-tasks
         params:
           unpack: true
@@ -198,12 +199,13 @@ jobs:
 
 - name: store-staged-director-config
   plan:
-  - get: pcf-automation-image
-    params:
-      unpack: true
-    passed:
-    - install-director
   - aggregate:
+    - get: pcf-automation-image
+      params:
+        unpack: true
+      passed:
+      - install-director
+      trigger: true
     - get: pcf-automation-tasks
       params:
         unpack: true
