--- a/pipelines/pivnet-download/pipeline.yml
+++ b/pipelines/pivnet-download/pipeline.yml
@@ -41,7 +41,7 @@ resources:
     secret_access_key: ((secret_access_key))
     region_name: ((aws_region))
     bucket: ((artifacts_bucket))
-    regexp: pas-stemcell/bosh-stemcell-(.*)-vsphere.*\.tgz
+    regexp: pas-stemcell/light-bosh-stemcell-(.*)-aws.*\.tgz
 
 - name: pcf-automation-pivnet
   type: pivnet
