--- a/config/product/config/pas.yml
+++ b/config/product/config/pas.yml
@@ -340,7 +340,7 @@ resource-config:
   #     id: automatic
   #   internet_connected: false
   diego_brain:
-    # instances: automatic
+    instances: automatic
     # instance_type:
     #   id: automatic
     # internet_connected: false
@@ -401,7 +401,7 @@ resource-config:
   #     id: automatic
   #   internet_connected: false
   router:
-    # instances: automatic
+    instances: automatic
     # instance_type:
     #   id: automatic
     # internet_connected: false
