--- a/pipelines/foundation-install/pipeline.yml
+++ b/pipelines/foundation-install/pipeline.yml
@@ -416,3 +416,41 @@ jobs:
       VARS_FILES: vars/config/product/vars/pas.yml
       ENV_FILE: config/environment/env.yml
       CONFIG_FILE: config/product/config/pas.yml
+
+- name: apply-product-changes
+  serial: true
+  plan:
+  - aggregate:
+    - get: pcf-automation-image
+      params:
+        unpack: true
+      passed:
+      - configure-pas
+      trigger: true
+    - get: pcf-automation-tasks
+      params:
+        unpack: true
+    - get: pcf-aws-automation
+
+  - task: credhub-interpolate
+    image: pcf-automation-image
+    file: pcf-automation-tasks/tasks/credhub-interpolate.yml
+    params:
+      CREDHUB_CLIENT: ((credhub-client))
+      CREDHUB_SECRET: ((credhub-secret))
+      CREDHUB_SERVER: ((credhub-server))
+      CREDHUB_CA_CERT: ((credhub-ca.certificate))
+      PREFIX: '/'
+      INTERPOLATION_PATH: 'config/environment'
+    input_mapping:
+      files: pcf-aws-automation
+    output_mapping:
+      interpolated-files: env-interpolated
+
+  - task: apply-product-changes
+    image: pcf-automation-image
+    file: pcf-automation-tasks/tasks/apply-changes.yml
+    input_mapping:
+      env: env-interpolated
+    params:
+      ENV_FILE: config/environment/env.yml
