--- a/pipelines/foundation-install/pipeline.yml
+++ b/pipelines/foundation-install/pipeline.yml
@@ -405,6 +405,10 @@ jobs:
     output_mapping:
       interpolated-files: env-interpolated
 
+  - task: tfstate-interpolate
+    image: pcf-automation-image
+    file: pcf-aws-automation/tasks/tfstate-interpolate/task.yml
+
   - task: configure-pas
     image: pcf-automation-image
     file: pcf-automation-tasks/tasks/configure-product.yml
