--- a/tasks/tfstate-interpolate/task.yml
+++ b/tasks/tfstate-interpolate/task.yml
@@ -3,6 +3,7 @@ platform: linux
 
 inputs:
 - name: tasks # contains the product configuration file
+- name: texplate
 
 run:
   path: tasks/tasks/tfstate-interpolate/task.sh
