--- a/pipelines/foundation-install/pipeline.yml
+++ b/pipelines/foundation-install/pipeline.yml
@@ -1,6 +1,15 @@
 ---
 resources:
 
+- name: tf-state
+  type: s3
+  source:
+    access_key_id: ((access_key_id))
+    secret_access_key: ((secret_access_key))
+    region_name: ((aws_region))
+    bucket: ((tf_state_bucket))
+    versioned_file: terraform.tfstate
+
 - name: tools-texplate
   type: s3
   source:
@@ -8,7 +17,7 @@ resources:
     secret_access_key: ((secret_access_key))
     region_name: ((aws_region))
     bucket: ((artifacts_bucket))
-    regexp: tools/texplate
+    regexp: tools/texplate-(.*)
 
 - name: pcf-automation-tasks
   type: s3
@@ -419,8 +428,13 @@ jobs:
     image: pcf-automation-image
     file: pcf-aws-automation/tasks/tfstate-interpolate/task.yml
     input_mapping:
+      tf_state: tf_state
       tasks: pcf-aws-automation
       texplate: tools-texplate
+      files: pcf-aws-automation
+    params:
+      CONFIG_FILE: config/product/config/pas.yml
+      INTERPOLATION_PATH: config/product/config/pas.yml
 
   - task: configure-pas
     image: pcf-automation-image
